// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyButton component matches the className snapshot 1`] = `
<div
  className="copyPosition center"
>
  <div
    className="copyContainer"
  >
    <div
      className="message"
    >
      <div
        className="successMessage"
      >
        <span>
          Copied!
        </span>
      </div>
      <div
        className="errorMessage"
      >
        <span>
          Failed!
        </span>
      </div>
    </div>
    <button
      aria-label="Copy text"
      className="copyButton"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="copyIcon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
        >
          <path
            d="M7 9.667A2.667 2.667 0 0 1 9.667 7h8.666A2.667 2.667 0 0 1 21 9.667v8.666A2.667 2.667 0 0 1 18.333 21H9.667A2.667 2.667 0 0 1 7 18.333z"
          />
          <path
            d="M4.012 16.737A2 2 0 0 1 3 15V5c0-1.1.9-2 2-2h10c.75 0 1.158.385 1.5 1"
          />
        </g>
      </svg>
    </button>
  </div>
</div>
`;

exports[`CopyButton component matches the snapshot 1`] = `
<div
  className="copyPosition"
>
  <div
    className="copyContainer"
  >
    <div
      className="message"
    >
      <div
        className="successMessage"
      >
        <span>
          Copied!
        </span>
      </div>
      <div
        className="errorMessage"
      >
        <span>
          Failed!
        </span>
      </div>
    </div>
    <button
      aria-label="Copy text"
      className="copyButton"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="copyIcon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2}
        >
          <path
            d="M7 9.667A2.667 2.667 0 0 1 9.667 7h8.666A2.667 2.667 0 0 1 21 9.667v8.666A2.667 2.667 0 0 1 18.333 21H9.667A2.667 2.667 0 0 1 7 18.333z"
          />
          <path
            d="M4.012 16.737A2 2 0 0 1 3 15V5c0-1.1.9-2 2-2h10c.75 0 1.158.385 1.5 1"
          />
        </g>
      </svg>
    </button>
  </div>
</div>
`;
